--- a/pyvenv.cfg
+++ b/pyvenv.cfg
@@ -1,8 +1,19 @@
-home = C:\Users\1\AppData\Local\Programs\Python\Python310
+home = C:\Users\Game On Dp\AppData\Local\Programs\Python\Python310
 implementation = CPython
-version_info = 3.10.7.final.0
+version_info = 3.10.4.final.0
 virtualenv = 20.13.0
-include-system-site-packages = true
-base-prefix = C:\Users\1\AppData\Local\Programs\Python\Python310
-base-exec-prefix = C:\Users\1\AppData\Local\Programs\Python\Python310
-base-executable = C:\Users\1\AppData\Local\Programs\Python\Python310\python.exe
+include-system-site-packages = false
+base-prefix = C:\Users\Game On Dp\AppData\Local\Programs\Python\Python310
+base-exec-prefix = C:\Users\Game On Dp\AppData\Local\Programs\Python\Python310
+base-executable = C:\Users\Game On Dp\AppData\Local\Programs\Python\Python310\python.exe
+
+
+;home = C:\Users\1\AppData\Local\Programs\Python\Python310
+;implementation = CPython
+;version_info = 3.10.7.final.0
+;virtualenv = 20.13.0
+;include-system-site-packages = true
+;base-prefix = C:\Users\1\AppData\Local\Programs\Python\Python310
+;base-exec-prefix = C:\Users\1\AppData\Local\Programs\Python\Python310
+;base-executable = C:\Users\1\AppData\Local\Programs\Python\Python310\python.exe
+
